src/objects/Theatre__c.object
<CustomObject>
    <description>Contains the Theatre List and the details of the theatre</description>
    <fields>
        <fullName>Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Takes the local language of the theatre</description>
        <label>Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Theatres</relationshipLabel>
        <relationshipName>Theatres</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Takes the territory name of the theatre</description>
        <label>Territory</label>
        <lookupFilter>
            <active>false</active>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Theatres</relationshipLabel>
        <relationshipName>Theatres</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>This stores the title of the movie which is to be released</description>
        <label>Title</label>
        <referenceTo>Title__c</referenceTo>
        <relationshipLabel>Theatres</relationshipLabel>
        <relationshipName>Theatres</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Theatre</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Theatre Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Theatres</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>